# MyDefaultSite

./: .gitignore  Dockerfile  README.md  database.py  index.html  pyproject.toml  render.yaml  script.js  server.py  stats.php  style.css  vercel.json  wakatime-data.json
.emergent/: emergent.yml
.github/workflows/: wakatime.yml
assets/css/: app.css
assets/js/: api.js  app.js  auth.js  router.js  utils.js
assets/js/components/: file-tree.js  modal.js  navbar.js
assets/js/pages/: admin-panel.js  bot.js  chat.js  contact.js  course-detail.js  course-reader.js  courses.js  home.js  login.js  not-found.js  password-reset.js  profile.js  project-detail.js  projects.js  register.js  services.js  settings.js
backend/: .env  .env.example  database.py  projects.db  requirements.txt  server.py
backend/scripts/: add_folder_support.sql  add_markdown_to_services.py  check_services.py  create_admin.py  create_demo_project.py  create_demo_services.py  migrate_db.py
backend/tests/: test_profile_and_conversations.py
frontend/: package.json
