[project]
name = "mydefaultsite"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "email-validator>=2.1.0",
    "fastapi>=0.109.0",
    "fastapi-mail>=1.4.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.5.3",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
